PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/ProjectBudgetDetail__c.object-meta.xml
<CustomObject>
    <label>프로젝트 비용 예산 상세</label>
    <nameField>
        <displayFormat>P-EXP-{YY}{MM}-{000}</displayFormat>
        <label>프로젝트 예산</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>