PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>UnitPrice__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>단가 * 수량</inlineHelpText>
    <label>금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>