PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/BudgetType__c.field-meta.xml
<CustomField>
    <fullName>BudgetType__c</fullName>
    <label>예산구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseType</valueSetName>
    </valueSet>
</CustomField>