PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/fm_Amount__c.field-meta.xml
<CustomField>
    <fullName>fm_Amount__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>비용예산</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>