PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/fm_PrjName__c.field-meta.xml
<CustomField>
    <fullName>fm_PrjName__c</fullName>
    <formula>ProjectBudget__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>프로젝트명</label>
    <type>Text</type>
</CustomField>