PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <inlineHelpText>비용 에산을 산출한 근거를 기록. ex) 인원수 3명 * 주5일 * 2달 * 2회</inlineHelpText>
    <label>비고(산출근거)</label>
    <type>TextArea</type>
</CustomField>