PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/ProjectBudget__c.field-meta.xml
<CustomField>
    <fullName>ProjectBudget__c</fullName>
    <label>프로젝트 비용 예산</label>
    <referenceTo>ProjectBudget__c</referenceTo>
    <relationshipLabel>프로젝트 비용 예산 상세</relationshipLabel>
    <relationshipName>ProjectBudgetDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>