PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>수량</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>