PA_Education/TestMenifest/force-app/main/default/objects/ProjectBudgetDetail__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>단가</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>